--- a/doc/upgrade/3.0.md
+++ b/doc/upgrade/3.0.md
@@ -117,7 +117,7 @@
   classes `Ecommit\CrudBundle\Form\Filter\*Filter` (dans le même namespace) mais avec un fonctionnement et une
   API totalement différents. [Voir les nouveaux filtres](../references/filters.md)
 * La classe `AbstractFieldFilter` est supprimée et remplacée par `AbstractFilter`, avec un fonctionnement et une
-  API totalement différents. Si vous avez réalisé vos propres filtres, vous devez les adapter avec la nouvelle API.
+  API totalement différents. Si vous avez réalisé vos propres filtres, vous devez les adapter avec la [nouvelle API](../cookbook/create_filter.md).
 * Les filtres sont maintenant des services ayant le tag `ecommit_crud.filter`, hériter de `AbstractFilter`
   ou implémenter `FilterInterface`.
 
