Register for autoconfiguration ("ecommit_crud.filter" tag)

--- a/doc/upgrade/3.0.md
+++ b/doc/upgrade/3.0.md
@@ -118,8 +118,9 @@
   API totalement différents. [Voir les nouveaux filtres](../references/filters.md)
 * La classe `AbstractFieldFilter` est supprimée et remplacée par `AbstractFilter`, avec un fonctionnement et une
   API totalement différents. Si vous avez réalisé vos propres filtres, vous devez les adapter avec la [nouvelle API](../cookbook/create_filter.md).
-* Les filtres sont maintenant des services ayant le tag `ecommit_crud.filter`, hériter de `AbstractFilter`
-  ou implémenter `FilterInterface`.
+* Les filtres sont maintenant des services ayant le tag `ecommit_crud.filter`, héritant de `AbstractFilter`
+  ou implémentant `FilterInterface`. (Remarque: Avec l'option [autoconfigure](https://symfony.com/doc/current/service_container.html#services-autoconfigure)
+  de Symfony, le tag est automatiquement ajouté aux services).
 
 
 
