Remove DoctrineExtension and Paginator

--- a/doc/upgrade/3.0.md
+++ b/doc/upgrade/3.0.md
@@ -128,17 +128,64 @@
 
 **Namespace: Ecommit\CrudBundle\DoctrineExtension**
 
-* La méthode `count` de `Paginate` est supprimée. Utiliser à la place les méthodes `Doctrine\ORM\Tools\Pagination\Paginator::count` 
-  ou `Paginate::countQueryBuilder`.
+Les classes `Ecommit\CrudBundle\DoctrineExtension\*` sont supprimées. Utiliser à la place [ecommit/doctrine-utils](https://github.com/e-commit/doctrine-utils) :
+
+> **_REMARQUE:_**  Ce bundle a comme dépendances cette librairie.
+
+Si vous utilisez l'une de ces classes, voici la migration à effectuer :
+* Méthode `Paginate::count` : Pas d'équivalent
+* Méthode `Paginate::countQueryBuilder` : Utiliser `Ecommit\DoctrineUtils\Paginator\DoctrinePaginatorBuilder::countQueryBuilder`
+  avec les adaptations suivantes :
+    * La méthode contient un unique argument : Un tableau d'options (le nom des options reste inchangé). L'objet QueryBuilder 
+      est à passer dans l'option `query_builder` de ce tableau
+* Méthode `Paginate::createDoctrinePaginator` : Utiliser `Ecommit\DoctrineUtils\Paginator\DoctrinePaginatorBuilder::createDoctrinePaginator`
+  avec les adaptations suivantes :
+    * Retourne un objet de type `Ecommit\DoctrineUtils\Paginator\AbstractDoctrinePaginator`
+    * L'option `behavior` n'existe plus. Le choix du comportement est réalisé en fonction de la nouvelle option `by_identifier` (si nulle ou non).
+    * L'option `identifier` est renommée en `by_identifier`.
+    * Les options `count_manual_value` et `count_options` sont fusionnées en une unique option `count`.
 
 
 ## Paginator
 
 **Namespace: Ecommit\CrudBundle\Paginator**
 
-* La méthode `setResults` de `ArrayPaginator` est supprimée. Utiliser à la place la méthode `setData`.
-* La méthode `setResultsWithoutSlice` de `ArrayPaginator` est supprimée. Utiliser à la place la méthode `setDataWithoutSlice`.
-* La méthode `setDbalQueryBuilder` et `DoctrineDBALPaginator` est supprimée. Utiliser à la place la méthode `setQueryBuilder`.
+Les classes `Ecommit\CrudBundle\Paginator\*` sont supprimées. Utiliser à la place [ecommit/paginator](https://github.com/e-commit/paginator)
+et [ecommit/doctrine-utils](https://github.com/e-commit/doctrine-utils) :
+
+> **_REMARQUE:_**  Ce bundle a comme dépendances ces 2 librairies.
+
+Si vous utilisez l'une de ces classes, voici la migration à effectuer :
+* Pour `AbstractPaginator` (et donc `ArrayPaginator`, `AbstractDoctrinePaginator`, `DoctrineDBALPaginator` et `DoctrineORMPaginator`) :
+    * L'unique valeur du constructeur est un tableau d'options.
+    * Toutes les méthodes publiques `set*` n'existent plus. Utiliser le tableau d'options du constructeur.
+    * Ne plus appeler la fonction `init` qui est supprimée.
+    * Passez le numéro de page et le nombre résultats par page dans les options du constructeurs: options `page` (oligatoire) et `max_per_page` (facultative).
+    * Méthodes publiques ajoutées : `pageExists`, `isInitialized`, `getOptions`, `getOption`.
+    * Méthodes abstraites protégées ajoutées : `buildCount`, `buildIterator`.
+    * Méthodes publiques supprimées : `getCountResults` (utiliser méthode `count`), `setPage` (utiliser l'option `page` du constructeur),
+        `getMaxPerPage` (utiliser l'option `max_per_page`) du constructeur.
+    * Méthodes publiques abstraites supprimées : `init`, `getResults` (utiliser la méthode `getIterator`).
+    * Méthodes protégées supprimées : `setCountResults` (utiliser l'option `count` du constructeur), `initLastPage`, `isIteratorInitialized`.
+    * Données membres protégées supprimées: `page`, `maxPerPage`, `lastPage`, `countResults`, `results`.
+    * L'équivalent de `AbstractPaginator` est `Ecommit\Paginator\AbstractPaginator`.
+* Pour `ArrayPaginator`, utilisez à la pace  `Ecommit\Paginator\ArrayPaginator` avec les modifications suivantes :
+    * Les méthodes `setData` et `setResults` sont supprimées. Utiliser à la place l'option `data` du constructeur.
+    * Les méthodes `setResultsWithoutSlice` et `setDataWithoutSlice` sont supprimées. Utiliser à la place les 2 options
+        `data` et `count` du constructeur.
+    * Données membres protégées supprimées : `initialObjects`, `manualCountResults`.
+* Pour `AbstractDoctrinePaginator` (et donc `DoctrineDBALPaginator` et `DoctrineORMPaginator`) :
+    * L'objet QueryBuilder est à passer dans l'option `query_builder` du constructeur.
+    * Méthodes abstraites protégées supprimées : `getQueryBuilderClass`, `initPaginator`.
+    * Méthodes publiques supprimées : `getQueryBuilder`, `setQueryBuilder`, `getManualCountResults`, `setManualCountResults`
+        `getCountOptions`, `setCountOptions`.
+    * Données membres protégées supprimées : `query`, `manualCountResults`, `countOptions`.
+    * L'équivalent de `AbstractDoctrinePaginator` est `Ecommit\Plaginator\AbstractDoctrinePaginator`.
+* Pour `DoctrineDBALPaginator`, utilisez à la place `Ecommit\DoctrineUtils\Paginator\DoctrineDBALPaginator`.
+* Pour `DoctrineORMPaginator`, utilisez à la place `Ecommit\DoctrineUtils\Paginator\DoctrineORMPaginator` avec les modifications suivantes :
+    * La méthode `setSimplifiedRequest` est supprimée. Utiliser à la place l'option `simplified_request` du constructeur.
+    * La méthode `setFetchJoinCollection` est supprimée. Utiliser à la place l'option `fetch_join_collection` du constructeur.
+    * Méthodes publiques supprimées : `isSimplifiedRequest`, `isFetchJoinCollection`.
 
 
 
@@ -169,6 +216,9 @@
     * `text_last`
     * `use_bootstrap`
     * `bootstrap_size`
+* La signature de la fonction Twig `paginator_links` est modifiée:
+    * Avant `paginator_links(AbstractPaginator $paginator, $routeName, $routeParams, $options)`
+    * Maintenance: `paginator_links(PaginatorInterface $paginator, string $routeName, array $routeParams = [], array $options = [])`
 * La signature de la fonction Twig `crud_paginator_links` est modifiée:
     * Avant: `crud_paginator_links(Crud $crud, $options = [], $ajaxOptions = [])`
     * Maintenant: `crud_paginator_links(Crud $crud, array $options = [])`
