--- a/doc/upgrade/3.0.md
+++ b/doc/upgrade/3.0.md
@@ -69,7 +69,9 @@
     * `$router`, `formFactory`, `$request`, `$registry`: Un locator est utilisé à la place.
     * `$user`
 * Les méthodes suivantes de `Crud` sont supprimées:
-    * `getSearcherForm`. Elle est remplacée par la méthode `getSearchForm`
+    * `getSearcherForm`. Elle est remplacée par la méthode `getSearchForm`. Cette nouvelle méthode retourne :
+        * Soit un objet `SearchFormBuilder`, avant que la méthode `clearTemplate` soit appelée
+        * Soit un objet `FormView`, après que la méthode `clearTemplate` soit appelée
     * `setUseDbal`
     * `configureTemplate`, `getTemplateConfiguration` et `validateConfigureTemplateFunctionName`: Voir l'alternative avec
       [le nouveau système](../cookbook/template_configuration.md).
@@ -78,6 +80,7 @@
 * La méthode `createSearcherForm` de `Crud` est renommée en `createSearchForm`. La signature est modifiée:
     * Avant: `createSearcherForm(AbstractFormSearcher $defaultFormSearcherData, $type = null, $options = [])`
     * Après: `createSearchForm(SearcherInterface $defaultData, ?string $type = null, array $options = [])`
+* Les options du FormType personnalisé du formulaire de recherche doivent être passées dans l'option `form_options` (3ème argument) de `createSearchForm`
 * La signature du constructeur de `CrudFactory` est modifiée:
     * Avant: `__construct(RouterInterface $router, FormFactoryInterface $formFactory, RequestStack $requestStack, ManagerRegistry $registry, TokenStorageInterface $tokenStorage, array $templateConfiguration)`
     * Maintenant: `__construct(ContainerInterface $container)`
@@ -85,6 +88,7 @@
 * Toutes les données membres de `CrudFactory` sont supprimées. Un locator est utilisé à la place.
 * La donnée membre `$formSearcherData` de `CrudSession` est supprimée. Elle est remplacée par `$searchFormData`
   qui est une instance de `SearcherInterface` ou nulle.
+* Ne plus appeler la méthode `init` de `Crud` dans a méthode `createCrud` des contrôleurs
 
 
 
@@ -218,7 +222,7 @@ Si vous utilisez l'une de ces classes, voici la migration à effectuer :
     * `bootstrap_size`
 * La signature de la fonction Twig `paginator_links` est modifiée:
     * Avant `paginator_links(AbstractPaginator $paginator, $routeName, $routeParams, $options)`
-    * Maintenance: `paginator_links(PaginatorInterface $paginator, string $routeName, array $routeParams = [], array $options = [])`
+    * Maintenant: `paginator_links(PaginatorInterface $paginator, string $routeName, array $routeParams = [], array $options = [])`
 * La signature de la fonction Twig `crud_paginator_links` est modifiée:
     * Avant: `crud_paginator_links(Crud $crud, $options = [], $ajaxOptions = [])`
     * Maintenant: `crud_paginator_links(Crud $crud, array $options = [])`
@@ -342,4 +346,5 @@ La classe `CrudHelper` est supprimée.  Utiliser à la places les fonctions Twig
 Les événements suivants sont supprimés :
 * `ec-crud-update-search-after`
 * `ec-crud-update-list-after`
+
 Utiliser à la place l'événement `ec-crud-ajax-update-dom-after`.
