[UserCrudSettings] Edit sort length to 100

--- a/doc/upgrade/3.0.md
+++ b/doc/upgrade/3.0.md
@@ -23,6 +23,13 @@
 
 
 
+## UserCrudSettings
+
+* La colonne `sort` de la table `user_crud_settings` a maintenant une longueur de 100 caractères (30 avant). Mettre à jour
+  la base de données
+
+
+
 ## Contrôleur
 
 **Namespace: Ecommit\CrudBundle\Controller**
