--- a/doc/upgrade/3.0.md
+++ b/doc/upgrade/3.0.md
@@ -355,3 +355,14 @@ Les événements suivants sont supprimés :
 * `ec-crud-update-list-after`
 
 Utiliser à la place l'événement `ec-crud-ajax-update-dom-after`.
+
+
+
+## Services
+
+* Les services suivants sont renommés :
+
+| Ancien nom | Nouveau nom |
+|------------|-------------|
+| `Ecommit\CrudBundle\Twig\CrudExtension` | `ecommit_crud.twig.crud_extension` |
+| `Ecommit\CrudBundle\EventListener\MappingEntities` | `ecommit_crud.event_listener.mapping_entities` |
