Remove public services

--- a/doc/upgrade/3.0.md
+++ b/doc/upgrade/3.0.md
@@ -366,3 +366,7 @@ Utiliser à la place l'événement `ec-crud-ajax-update-dom-after`.
 |------------|-------------|
 | `Ecommit\CrudBundle\Twig\CrudExtension` | `ecommit_crud.twig.crud_extension` |
 | `Ecommit\CrudBundle\EventListener\MappingEntities` | `ecommit_crud.event_listener.mapping_entities` |
+
+* Les services suivant sont maintenant privés :
+    * `ecommit_crud.factory`
+    * `Ecommit\CrudBundle\Crud\CrudFactory`
