Add final classes

--- a/doc/upgrade/3.0.md
+++ b/doc/upgrade/3.0.md
@@ -65,6 +65,7 @@
 
 **Namespace: Ecommit\CrudBundle\Crud**
 
+* Les classes `Crud`, `CrudColumn`, `CrudFactory` et `CrudSession` sont maintenant finales.
 * La signature du constructeur de `Crud` est modifiée:
     * Avant: `__construct($sessionName, RouterInterface $router, FormFactoryInterface $formFactory, Request $request, Registry $registry, $user)`
     * Maintenant: `__construct($sessionName, ContainerInterface $container)`
