Delete unused templates

--- a/doc/upgrade/3.0.md
+++ b/doc/upgrade/3.0.md
@@ -304,7 +304,8 @@ Si vous utilisez l'une de ces classes, voici la migration à effectuer :
 * Les templates suivants sont supprimés:
     * `EcommitCrud/Crud/double_search.html.twig`
     * `EcommitCrud/Crud/form_settings_*`
-
+    * `EcommitCrud/Form/bootstrap_3_*`
+    * `EcommitCrud/Form/div_layout.html.twig`
 
 
 ## Crud Helper
