createDisplaySettingsForm is now protected

--- a/doc/upgrade/3.0.md
+++ b/doc/upgrade/3.0.md
@@ -88,6 +88,7 @@
 * La méthode `createSearcherForm` de `Crud` est renommée en `createSearchForm`. La signature est modifiée:
     * Avant: `createSearcherForm(AbstractFormSearcher $defaultFormSearcherData, $type = null, $options = [])`
     * Après: `createSearchForm(SearcherInterface $defaultData, ?string $type = null, array $options = [])`
+* La méthode `createDisplaySettingsForm` est maintenant protégée.
 * Les options du FormType personnalisé du formulaire de recherche doivent être passées dans l'option `form_options` (3ème argument) de `createSearchForm`
 * La signature du constructeur de `CrudFactory` est modifiée:
     * Avant: `__construct(RouterInterface $router, FormFactoryInterface $formFactory, RequestStack $requestStack, ManagerRegistry $registry, TokenStorageInterface $tokenStorage, array $templateConfiguration)`
