--- a/doc/upgrade/3.0.md
+++ b/doc/upgrade/3.0.md
@@ -47,13 +47,7 @@
 * La méthode `autoAjaxSearchAction` de `CrudControllerTrait` est supprimée. Il n'existe plus d'action spécifique à la recherche.
 * Les méthodes `prepareList`, `processSearch`, `renderCrudView` et `renderCrud` de `CrudControllerTrait` sont supprimées.
 * La méthode `configCrud` de `CrudControllerTrait` est supprimée. Utiliser à la place la méthode `getCrud` (signature différente).
-* La méthode `addDataAfterBuildQuery` de `CrudControllerTrait` est supprimée. Voir l'alternative avec [le nouveau système](../cookbook/data-template.md).
-* La signature de la méthode `beforeBuildQuery` de `CrudControllerTrait` est modifiée:
-    * Avant: `beforeBuildQuery()`
-    * Maintenant: `beforeBuildQuery(Crud $crud, array $data): array`
-* La signature de la méthode `afterBuildQuery` de `CrudControllerTrait` est modifiée:
-    * Avant: `afterBuildQuery()`
-    * Maintenant: `afterBuildQuery(Crud $crud, array $data): array`
+* Les méthodes `addDataAfterBuildQuery`, `beforeBuildQuery` et `afterBuildQuery` de `CrudControllerTrait` sont supprimées. Voir l'alternative avec [le nouveau système](../cookbook/data-template.md).
 * La méthode `getCrudRequiredServices` de `CrudControllerTrait` ne retourne plus les services `twig` et `request_stack`. Si
   les contrôleurs n'hérite pas de `AbstractCrudController` ou `Symfony\Bundle\FrameworkBundle\Controller\AbstractController`,
   ces services ne seront plus injectés au locator du contrôleur.
