--- a/doc/upgrade/3.0.md
+++ b/doc/upgrade/3.0.md
@@ -85,6 +85,7 @@
 * La méthode `createDisplaySettingsForm` est maintenant protégée.
 * La méthode `raz` est renommée en `reset`
 * La méthode `razSort` est renommée en `resetSort`
+* La méthode `processForm` est renommée en `processSearchForm`
 * Les options du FormType personnalisé du formulaire de recherche doivent être passées dans l'option `form_options` (3ème argument) de `createSearchForm`
 * La signature du constructeur de `CrudFactory` est modifiée:
     * Avant: `__construct(RouterInterface $router, FormFactoryInterface $formFactory, RequestStack $requestStack, ManagerRegistry $registry, TokenStorageInterface $tokenStorage, array $templateConfiguration)`
