--- a/doc/upgrade/3.0.md
+++ b/doc/upgrade/3.0.md
@@ -72,8 +72,8 @@
     * `$user`
 * Les méthodes suivantes de `Crud` sont supprimées:
     * `getSearcherForm`. Elle est remplacée par la méthode `getSearchForm`. Cette nouvelle méthode retourne :
-        * Soit un objet `SearchFormBuilder`, avant que la méthode `clearTemplate` soit appelée
-        * Soit un objet `FormView`, après que la méthode `clearTemplate` soit appelée
+        * Soit un objet `SearchFormBuilder`, avant que la méthode `createView` soit appelée
+        * Soit un objet `FormView`, après que la méthode `createView` soit appelée
     * `setUseDbal`
     * `configureTemplate`, `getTemplateConfiguration` et `validateConfigureTemplateFunctionName`: Voir l'alternative avec
       [le nouveau système](../cookbook/template_configuration.md).
@@ -86,6 +86,7 @@
 * La méthode `raz` est renommée en `reset`
 * La méthode `razSort` est renommée en `resetSort`
 * La méthode `processForm` est renommée en `processSearchForm`
+* La méthode `clearTemplate` est renommée en `createView`
 * Les options du FormType personnalisé du formulaire de recherche doivent être passées dans l'option `form_options` (3ème argument) de `createSearchForm`
 * La signature du constructeur de `CrudFactory` est modifiée:
     * Avant: `__construct(RouterInterface $router, FormFactoryInterface $formFactory, RequestStack $requestStack, ManagerRegistry $registry, TokenStorageInterface $tokenStorage, array $templateConfiguration)`
