Replace "sense" by "sortDirection"

--- a/doc/upgrade/3.0.md
+++ b/doc/upgrade/3.0.md
@@ -27,6 +27,7 @@
 
 * La colonne `sort` de la table `user_crud_settings` a maintenant une longueur de 100 caractères (30 avant). Mettre à jour
   la base de données
+* La colonne `sense` de la table `user_crud_settings` est remplacée par la colonne `sort_direction`. Mettre à jour la base de données
 
 
 
@@ -83,6 +84,7 @@
     * Avant: `createSearcherForm(AbstractFormSearcher $defaultFormSearcherData, $type = null, $options = [])`
     * Après: `createSearchForm(SearcherInterface $defaultData, ?string $type = null, array $options = [])`
 * La méthode `createDisplaySettingsForm` est maintenant protégée.
+* La méthode `getDefaultSense` est renommée en `getDefaultSortDirection`
 * La méthode `raz` est renommée en `reset`
 * La méthode `razSort` est renommée en `resetSort`
 * La méthode `processForm` est renommée en `processSearchForm`
