Change UserCrudSettings::displayedColumns type

--- a/doc/upgrade/3.0.md
+++ b/doc/upgrade/3.0.md
@@ -27,6 +27,7 @@
 
 * La colonne `sort` de la table `user_crud_settings` a maintenant une longueur de 100 caractères (30 avant). Mettre à jour
   la base de données
+* La colonne `displayed_columns` de la table `user_crud_settings` a maintenant un type `JSON`. Mettre à jour la base de données
 * La colonne `sense` de la table `user_crud_settings` est remplacée par la colonne `sort_direction`. Mettre à jour la base de données
 
 
