The CrudColumn constructor now has a single options argument

--- a/doc/upgrade/3.0.md
+++ b/doc/upgrade/3.0.md
@@ -84,12 +84,12 @@
 * La méthode `createSearcherForm` de `Crud` est renommée en `createSearchForm`. La signature est modifiée:
     * Avant: `createSearcherForm(AbstractFormSearcher $defaultFormSearcherData, $type = null, $options = [])`
     * Après: `createSearchForm(SearcherInterface $defaultData, ?string $type = null, array $options = [])`
-* La méthode `createDisplaySettingsForm` est maintenant protégée.
-* La méthode `getDefaultSense` est renommée en `getDefaultSortDirection`
-* La méthode `raz` est renommée en `reset`
-* La méthode `razSort` est renommée en `resetSort`
-* La méthode `processForm` est renommée en `processSearchForm`
-* La méthode `clearTemplate` est renommée en `createView`
+* La méthode `createDisplaySettingsForm` de `Crud` est maintenant protégée.
+* La méthode `getDefaultSense` de `Crud` est renommée en `getDefaultSortDirection`
+* La méthode `raz` de `Crud` est renommée en `reset`
+* La méthode `razSort` de `Crud` est renommée en `resetSort`
+* La méthode `processForm` de `Crud` est renommée en `processSearchForm`
+* La méthode `clearTemplate` de `Crud` est renommée en `createView`
 * Les options du FormType personnalisé du formulaire de recherche doivent être passées dans l'option `form_options` (3ème argument) de `createSearchForm`
 * La signature du constructeur de `CrudFactory` est modifiée:
     * Avant: `__construct(RouterInterface $router, FormFactoryInterface $formFactory, RequestStack $requestStack, ManagerRegistry $registry, TokenStorageInterface $tokenStorage, array $templateConfiguration)`
@@ -99,6 +99,8 @@
 * La donnée membre `$formSearcherData` de `CrudSession` est supprimée. Elle est remplacée par `$searchFormData`
   qui est une instance de `SearcherInterface` ou nulle.
 * Ne plus appeler la méthode `init` de `Crud` dans a méthode `createCrud` des contrôleurs
+* Le constructeur de `CrudColumn` possède maintenant un unique argument d'options.
+* Les données membres publiques de `CrudColumn` n'existent plus (`id`, `alias`, `aliasSearch`, `aliasSort`, `label`, `sortable`, `defaultDisplayed`). Utiliser à la place les fonctions getters (modificaton des valeurs impossible).
 
 
 
