--- a/doc/upgrade/3.0.md
+++ b/doc/upgrade/3.0.md
@@ -43,12 +43,35 @@
   `getTemplateName(string $action): string`
 * La méthode `getTemplateName` (anciennement `getPathView`) dans `CrudControllerTrait` est maintenant abstraite. Celle-ci doit être rajouter
   dans vos contrôleurs CRUD.
-* La méthode `createCrud` de `CrudControllerTrait` est maintenant `final`.
+* La méthode `createCrud` de `CrudControllerTrait` est maintenant `final`. Cette méthode possède maintenant un unique argument d'options.
 * La méthode `autoListAction` de `CrudControllerTrait` est supprimée. Utiliser à la place la méthode `getCrudResponse` (signature différente).
 * La méthode `autoAjaxListAction` de `CrudControllerTrait` est supprimée. Utiliser à la place la méthode `getAjaxCrudResponse` (signature différente).
 * La méthode `autoAjaxSearchAction` de `CrudControllerTrait` est supprimée. Il n'existe plus d'action spécifique à la recherche.
 * Les méthodes `prepareList`, `processSearch`, `renderCrudView` et `renderCrud` de `CrudControllerTrait` sont supprimées.
-* La méthode `configCrud` de `CrudControllerTrait` est supprimée. Utiliser à la place la méthode `getCrud` (signature différente).
+* La méthode `configCrud` de `CrudControllerTrait` est supprimée. Utiliser à la place la méthode `getCrudOptions` (signature différente). Dans cette nouvelle méthode :
+  * Une instance de `Ecommit\CrudBundle\Crud\CrudConfig` doit être créé grâce à `$this->createCrudConfig()`
+  * Seules les methodes suivantes (par rapport à l'ancien système) peuvent être conservées :
+    * `setSessionName`
+    * `addColumn` avec les changements suivants :
+      * L'option `default_displayed` est remplacée par `displayed_by_default`
+      * Bien que l'ancienne signature de `addColumn` reste compatible, il est conseillé de passer à cette méthode un 
+         unique argument d'options suivantes: `id`, `alias`, `label`, `sortable`, `displayed_by_default`, `alias_sort`, `alias_search`
+    * `addVirtualColumn` avec les changements suivants :
+      * Bien que l'ancienne signature de `addColumn` reste compatible, il est conseillé de passer à cette méthode un
+            unique argument d'options suivantes: `id`, `alias`
+    * `setMaxPerPage` (anciennement `setAvailableResultsPerPage`)
+    * `setDefaultSort`
+    * `setDefaultPersonalizedSort`
+    * `setQueryBuilder`
+    * `setRoute`
+    * `createSearchForm` (anciennement `createSearcherForm`)
+    * `setDisplayResultsOnlyIfSearch`
+    * `setBuildPaginator`
+    * `setPersistentSettings`
+    * `setDivIdSearch`
+    * `setDivIdList`
+    * `setTwigFunctionsConfiguration`
+  * Retourner un tableau grâce à l'appel de `CrudConfig::getOptions()`
 * Les méthodes `addDataAfterBuildQuery`, `beforeBuildQuery` et `afterBuildQuery` de `CrudControllerTrait` sont supprimées. Voir l'alternative avec [le nouveau système](../cookbook/data-template.md).
 * La méthode `getCrudRequiredServices` de `CrudControllerTrait` ne retourne plus les services `twig` et `request_stack`. Si
   les contrôleurs n'hérite pas de `AbstractCrudController` ou `Symfony\Bundle\FrameworkBundle\Controller\AbstractController`,
@@ -64,14 +87,9 @@
 * Les classes `Crud`, `CrudColumn`, `CrudFactory` et `CrudSession` sont maintenant finales.
 * La signature du constructeur de `Crud` est modifiée:
     * Avant: `__construct($sessionName, RouterInterface $router, FormFactoryInterface $formFactory, Request $request, Registry $registry, $user)`
-    * Maintenant: `__construct($sessionName, ContainerInterface $container)`
+    * Maintenant: `__construct(array $options, ContainerInterface $container)`
     * Utilisation d'un locator
-* Les données membres suivantes de `Crud` sont supprimées:
-    * `$formSearcher`: Elle est remplacée par la donnée membre `$searchForm` qui est une instance de `SearchFormBuilder`
-      ou `Symfony\Component\Form\FormView` ou nulle.
-    * `$defaultFormSearcherData`
-    * `$router`, `formFactory`, `$request`, `$registry`: Un locator est utilisé à la place.
-    * `$user`
+* La méthode `init` de `Crud` n'est plus publique.
 * Les méthodes suivantes de `Crud` sont supprimées:
     * `getSearcherForm`. Elle est remplacée par la méthode `getSearchForm`. Cette nouvelle méthode retourne :
         * Soit un objet `SearchFormBuilder`, avant que la méthode `createView` soit appelée
@@ -81,24 +99,39 @@
       [le nouveau système](../cookbook/template_configuration.md).
     * `setSearchRoute`: Il n'existe plus de route spécifique à la recherche.
     * `initializeFieldsFilter`
+    * `addColumn`
+    * `addVirtualColumn`
+    * `setQueryBuilder`
+    * `setAvailableResultsPerPage`
+    * `setDefaultSort`
+    * `setDefaultPersonalizedSort`
+    * `setRoute`
+    * `setDisplayResultsOnlyIfSearch`
+    * `setBuildPaginator`
+    * `setPersistentSettings`
+    * `setDivIdSearch`
+    * `setDivIdList`
 * La méthode `createSearcherForm` de `Crud` est renommée en `createSearchForm`. La signature est modifiée:
     * Avant: `createSearcherForm(AbstractFormSearcher $defaultFormSearcherData, $type = null, $options = [])`
     * Après: `createSearchForm(SearcherInterface $defaultData, ?string $type = null, array $options = [])`
-* La méthode `createDisplaySettingsForm` de `Crud` est maintenant protégée.
+* La méthode `createDisplaySettingsForm` de `Crud` n'est plus publique.
 * La méthode `getDefaultSense` de `Crud` est renommée en `getDefaultSortDirection`
 * La méthode `raz` de `Crud` est renommée en `reset`
 * La méthode `razSort` de `Crud` est renommée en `resetSort`
 * La méthode `processForm` de `Crud` est renommée en `processSearchForm`
 * La méthode `clearTemplate` de `Crud` est renommée en `createView`
+* La méthode `getAvailableResultsPerPage` de `Crud` est renommée en `getMaxPerPageChoices`
+* La méthode `getDefaultResultsPerPage` de `Crud` est renommée en `getDefaultMaxPerPage`
+* La méthode `getRouteParams` de `Crud` est renommée en `getRouteParameters`
 * Les options du FormType personnalisé du formulaire de recherche doivent être passées dans l'option `form_options` (3ème argument) de `createSearchForm`
 * La signature du constructeur de `CrudFactory` est modifiée:
     * Avant: `__construct(RouterInterface $router, FormFactoryInterface $formFactory, RequestStack $requestStack, ManagerRegistry $registry, TokenStorageInterface $tokenStorage, array $templateConfiguration)`
     * Maintenant: `__construct(ContainerInterface $container)`
     * Utilisation d'un locator
 * Toutes les données membres de `CrudFactory` sont supprimées. Un locator est utilisé à la place.
+* La méthode `create` de `CrudFactory`  possède maintenant un unique argument d'options.
 * La donnée membre `$formSearcherData` de `CrudSession` est supprimée. Elle est remplacée par `$searchFormData`
   qui est une instance de `SearcherInterface` ou nulle.
-* Ne plus appeler la méthode `init` de `Crud` dans a méthode `createCrud` des contrôleurs
 * Le constructeur de `CrudColumn` possède maintenant un unique argument d'options.
 * Les données membres publiques de `CrudColumn` n'existent plus (`id`, `alias`, `aliasSearch`, `aliasSort`, `label`, `sortable`, `defaultDisplayed`). Utiliser à la place les fonctions getters (modificaton des valeurs impossible).
 
