Improve form getters

--- a/doc/upgrade/3.0.md
+++ b/doc/upgrade/3.0.md
@@ -91,9 +91,9 @@
     * Utilisation d'un locator
 * La méthode `init` de `Crud` n'est plus publique.
 * Les méthodes suivantes de `Crud` sont supprimées:
-    * `getSearcherForm`. Elle est remplacée par la méthode `getSearchForm`. Cette nouvelle méthode retourne :
-        * Soit un objet `SearchFormBuilder`, avant que la méthode `createView` soit appelée
-        * Soit un objet `FormView`, après que la méthode `createView` soit appelée
+    * `getSearcherForm`. Elle est remplacée par les méthodes suivantes :
+        * `getSearchFormBuilder` : Retourne un objet `SearchFormBuilder` (peut être appelée uniquement avant que la méthode `createView` soit appelée)
+        * `getSearchForm` : Retourne un objet `FormView` (peut être appelée uniquement après que la méthode `createView` soit appelée)
     * `setUseDbal`
     * `configureTemplate`, `getTemplateConfiguration` et `validateConfigureTemplateFunctionName`: Voir l'alternative avec
       [le nouveau système](../cookbook/template_configuration.md).
