Replace CrudSession public properties by protected properties.
Add CrudSession methods
Remove UserCrudSettings::transformToCrudSession and UserCrudSettings::updateFromSessionManager

--- a/doc/upgrade/3.0.md
+++ b/doc/upgrade/3.0.md
@@ -29,6 +29,9 @@
   la base de données
 * La colonne `displayed_columns` de la table `user_crud_settings` a maintenant un type `JSON`. Mettre à jour la base de données
 * La colonne `sense` de la table `user_crud_settings` est remplacée par la colonne `sort_direction`. Mettre à jour la base de données
+* Les methodes suivantes sont supprimées :
+  * `transformToCrudSession`
+  * `updateFromSessionManager`
 
 
 
@@ -130,10 +133,10 @@
     * Utilisation d'un locator
 * Toutes les données membres de `CrudFactory` sont supprimées. Un locator est utilisé à la place.
 * La méthode `create` de `CrudFactory`  possède maintenant un unique argument d'options.
-* La donnée membre `$formSearcherData` de `CrudSession` est supprimée. Elle est remplacée par `$searchFormData`
+* Les données membres publiques de `CrudSession` n'existent plus (`formSearcherData`, `resultsPerPage`, `displayedColumns`, `sort`, `sense`, `page`). Utiliser à la place les fonctions getters (modification des valeurs impossible).
   qui est une instance de `SearcherInterface` ou nulle.
 * Le constructeur de `CrudColumn` possède maintenant un unique argument d'options.
-* Les données membres publiques de `CrudColumn` n'existent plus (`id`, `alias`, `aliasSearch`, `aliasSort`, `label`, `sortable`, `defaultDisplayed`). Utiliser à la place les fonctions getters (modificaton des valeurs impossible).
+* Les données membres publiques de `CrudColumn` n'existent plus (`id`, `alias`, `aliasSearch`, `aliasSort`, `label`, `sortable`, `defaultDisplayed`). Utiliser à la place les fonctions getters (modification des valeurs impossible).
 
 
 
