[paginatorLinks] Replace route_params  by route_parameters

--- a/doc/upgrade/3.0.md
+++ b/doc/upgrade/3.0.md
@@ -273,7 +273,7 @@ Si vous utilisez l'une de ces classes, voici la migration à effectuer :
     * `bootstrap_size`
 * La signature de la fonction Twig `paginator_links` est modifiée:
     * Avant `paginator_links(AbstractPaginator $paginator, $routeName, $routeParams, $options)`
-    * Maintenant: `paginator_links(PaginatorInterface $paginator, string $routeName, array $routeParams = [], array $options = [])`
+    * Maintenant: `paginator_links(PaginatorInterface $paginator, string $routeName, array $routeParameters = [], array $options = [])`
 * La signature de la fonction Twig `crud_paginator_links` est modifiée:
     * Avant: `crud_paginator_links(Crud $crud, $options = [], $ajaxOptions = [])`
     * Maintenant: `crud_paginator_links(Crud $crud, array $options = [])`
