[Crud] Change build_paginator closure signature

--- a/doc/upgrade/3.0.md
+++ b/doc/upgrade/3.0.md
@@ -72,7 +72,7 @@
     * `setRoute`
     * `createSearchForm` (anciennement `createSearcherForm`)
     * `setDisplayResultsOnlyIfSearch`
-    * `setBuildPaginator`
+    * `setBuildPaginator` (si fonction anonyme comme valeur, le 1er argument de celle-ci n'est plus un objet `QueryBuilder` mais `Crud`)
     * `setPersistentSettings`
     * `setDivIdSearch`
     * `setDivIdList`
